# blocklake

./: README.md  pyproject.toml
blocklake/glue_jobs/: write-bronze-to-silver-spark.py  write-queries-to-gold.py
blocklake/lambda/blockchair/: handler.py  requirements.txt  serverless.yml
blocklake/lambda/blockchair/blockchair/: api.py  db.py  ingestor.py  writer.py
blocklake/lambda/deffillama/: handler.py  requirements.txt  serverless.yml
tests/: test_blocklake.py
